# openni2-tracker

./: .gitignore  CMakeLists.txt  Changelog.txt  README.md  README.md~  mainpage.dox  manifest.xml  package.xml  setup_nite.bash
include/skeleton_tracker/: xtion_tracker.hpp
launch/: find_obj.launch  tracker.launch  tracker.launch~
msg/: TrackerUser.msg  TrackerUserArray.msg
src/: skeleton_tracker_node.cpp  tracker.cpp  xtion_tracker_node.cpp
