<?xml version="1.0"?>
<package>
  <name>openni2_tracker</name>
  <version>0.0.0</version>
  <description>openni2_tracker</description>

  <author>Kelleher Guerin</author>
  <maintainer email="email@email.com">Kelleher Guerin</maintainer>

  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/openni2_tracker</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend> <!-- nav_msgs, sensor_msgs, geometry_msgs -->
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend> <!-- nav_msgs, sensor_msgs, geometry_msgs -->
  <run_depend>std_msgs</run_depend>

  <run_depend>image_common</run_depend>
  <run_depend>ros</run_depend>
  <run_depend>ros_comm</run_depend>  <!-- rospy, roscpp -->
  <run_depend>kdl_conversions</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
