<?xml version="1.0"?>
<package>
  <name>skeleton_tracker</name>
  <version>0.1.0</version>
  <description>The skeleton_tracker package</description>

  <maintainer email="alessio.levratti@unimore.it">alessio</maintainer>
  <license>BSD</license>
  
  <author email="alessio.levratti@unimore.it">Alessio Levratti</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>openni2_camera</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>